--- a/index.html
+++ b/index.html
@@ -19,27 +19,33 @@
             <!-- header navigation -->
             <nav class="nav-bar">
                 <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
+                <button class="menu-btn js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="menu-btn__icons" width="40" height="40" aria-label="Перемикач мобільного меню">
+                        <use class="menu-btn__menu" href="./images/Icon/icons.svg#icon-menu"></use>
+                        <use class="menu-btn__cross" href="./images/Icon/icons.svg#icon-cross"></use>
+                    </svg>
+                </button>
                 <ul class="nav-bar__list">
                     <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link nav-bar__link--current">Студія</a></li>
                     <li class="nav-bar__item"><a href="./portfolio.html" class="nav-bar__link">Портфоліо</a></li>
                     <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link">Контакти</a></li>
                 </ul>
-            </nav>
     <!-- contacts -->
-            <ul class="contact">
-                <li class="contact__item">
-                    <a href="mailto:info@devstudio.com" class="contact__link">
-                    <svg class="contact__icon" width="16" height="12">
-                        <use href="./images/Icon/icons.svg#icon-mail"></use>
-                    </svg>
-                    info@devstudio.com</a>
-                </li>
-                <li class="contact__item"><a href="tel:++380961111111" class="contact__link">
-                    <svg class="contact__icon" width="10" height="16">
-                        <use href="./images/Icon/icons.svg#icon-phone"></use>
-                    </svg>
-                    +38 096 111 11 11</a></li>
-            </ul>
+                <ul class="contact">
+                    <li class="contact__item">
+                        <a href="mailto:info@devstudio.com" class="contact__link">
+                        <svg class="contact__icon" width="16" height="12">
+                            <use href="./images/Icon/icons.svg#icon-mail"></use>
+                        </svg>
+                        info@devstudio.com</a>
+                    </li>
+                    <li class="contact__item"><a href="tel:++380961111111" class="contact__link">
+                        <svg class="contact__icon" width="10" height="16">
+                            <use href="./images/Icon/icons.svg#icon-phone"></use>
+                        </svg>
+                        +38 096 111 11 11</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <!-- main section -->
@@ -459,8 +465,26 @@
         </div>
     </div>
 
+    <!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg class="menu-btn__icons" width="40" height="40" aria-label="Перемикач мобільного меню">
+                <use class="menu-btn__cross" href="./images/Icon/icons.svg#icon-cross"></use>
+            </svg>
+        </button>
+    
+        <ul class="mobile-menu">
+            <li><a href="" class="link">About</a></li>
+            <li><a href="" class="link">Products</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+            <li><a href="" class="link">Career</a></li>
+        </ul>
+    </div>
 <!-- js -->
-
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+    <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 </html>
