--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
             <!-- header navigation -->
             <nav class="nav-bar">
                 <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
-                <button class="menu-btn js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
+                <button class="menu-toggle js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
                     <svg class="menu-btn__icons" width="40" height="40" aria-label="Перемикач мобільного меню">
                         <use class="menu-btn__menu" href="./images/Icon/icons.svg#icon-menu"></use>
-                        <use class="menu-btn__cross" href="./images/Icon/icons.svg#icon-cross"></use>
                     </svg>
                 </button>
                 <ul class="nav-bar__list">
@@ -126,7 +125,7 @@
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="team__card">
-                        <img src="./images/manager-1.jpg" alt="співробітник Ігор" width="270">
+                        <img src="./images/manager-1.jpg" alt="співробітник Ігор" width="450">
                         <div class="manager-card">
                             <h3 class="manager-card__title">Ігор Дем'яненко</h3>
                             <p class="manager-card__text" lang="en">Product Designer</p>
@@ -163,7 +162,7 @@
                         </div>
                     </li>
                     <li class="team__card">
-                        <img src="./images/manager-2.jpg" alt="співробітник Ольга" width="270">
+                        <img src="./images/manager-2.jpg" alt="співробітник Ольга" width="450">
                         <div class="manager-card">
                             <h3 class="manager-card__title">Ольга Рєпіна</h3>
                             <p class="manager-card__text" lang="en">Frontend Developer</p>
@@ -200,7 +199,7 @@
                         </div>
                     </li>
                     <li class="team__card">
-                        <img src="./images/manager-3.jpg" alt="співробітник Микола" width="270">
+                        <img src="./images/manager-3.jpg" alt="співробітник Микола" width="450">
                         <div class="manager-card">
                             <h3 class="manager-card__title">Микола Тарасов</h3>
                             <p class="manager-card__text" lang="en">Marketing</p>
@@ -237,7 +236,7 @@
                         </div>
                     </li>
                     <li class="team__card">
-                        <img src="./images/manager-4.jpg" alt="співробітник Михайло" width="270">
+                        <img src="./images/manager-4.jpg" alt="співробітник Михайло" width="450">
                         <div class="manager-card">
                             <h3 class="manager-card__title">Михайло Єрмаков</h3>
                             <p class="manager-card__text" lang="en">UI Designer</p>
@@ -337,16 +336,16 @@
             <div class="footer-contacts">
                 <a href="./index.html" class="logo-bsmt">Web<span class="logo-bsmt-part">Studio</span></a>
                 <address>
-                    <ul>
-                        <li class="footer-contacts__list">
+                    <ul class="footer-contacts__list">
+                        <li class="footer-contacts__item">
                             <p class="footer-contacts__adds">м. Київ, пр-т Лесі Українки, 26</p>
                         </li>
-                        <li class="footer-contacts__list">
+                        <li class="footer-contacts__item">
                             <a href="mailto:info@devstudio.com" class="footer-contacts__link">
                                 info@devstudio.com
                             </a>
                         </li>
-                        <li class="footer-contacts__list">
+                        <li class="footer-contacts__item">
                             <a href="tel:++380961111111" class="footer-contacts__link">
                                 +38 096 111 11 11
                             </a>
