--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
 
     <!-- mobile menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
+        <h2 class="visually-hidden">mobile menu</h2>
         <button class="menu-toggle js-close-menu">
             <svg class="menu-toggle__icons" width="40" height="40" aria-label="Перемикач мобільного меню">
                 <use class="menu-toggle__cross" href="./images/Icon/icons.svg#icon-cross"></use>
@@ -478,25 +479,25 @@
         </ul>
         <ul class="menu-contact">
             <li class="menu-contact__item">
-                <a href="tel:++380961111111" class="menu-contact__link">+38 096 111 11 11</a>
+                <a href="tel:++380961111111" class="menu-contact__tel">+38 096 111 11 11</a>
             </li>
             </li>
             <li class="menu-contact__item">
-                <a href="mailto:info@devstudio.com" class="menu-contact__link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="menu-contact__mail">info@devstudio.com</a>
             </li>
         </ul>
         <ul class="menu-soc">
             <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">instagram</a>
+                <a href="./index.html" class="menu-soc__link">Instagram</a>
             </li>
             <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">twitter</a>
+                <a href="./index.html" class="menu-soc__link">Twitter</a>
             </li>
             <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">facebook</a>
+                <a href="./index.html" class="menu-soc__link">Facebook</a>
             </li>
             <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">linkedin</a>
+                <a href="./index.html" class="menu-soc__link">LinkedIn</a>
             </li>
         </ul>
     </div>
