--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфоліо</title>
+    <title>Студія</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -19,28 +19,33 @@
             <!-- header navigation -->
             <nav class="nav-bar">
                 <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
+                <button class="menu-toggle js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="menu-toggle__icons" width="40" height="40" aria-label="Перемикач мобільного меню">
+                        <use class="menu-toggle__menu" href="./images/Icon/icons.svg#icon-menu"></use>
+                    </svg>
+                </button>
                 <ul class="nav-bar__list">
-                    <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link">Студія</a>
+                    <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link nav-bar__link">Студія</a>
                     </li>
-                    <li class="nav-bar__item"><a href="./portfolio.html" class="nav-bar__link nav-bar__link--current">Портфоліо</a></li>
+                    <li class="nav-bar__item"><a href="./portfolio.html" class="nav-bar__link--current">Портфоліо</a></li>
                     <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link">Контакти</a></li>
                 </ul>
+                <!-- contacts -->
+                <ul class="contact">
+                    <li class="contact__item">
+                        <a href="mailto:info@devstudio.com" class="contact__link">
+                            <svg class="contact__icon" width="16" height="12">
+                                <use href="./images/Icon/icons.svg#icon-mail"></use>
+                            </svg>
+                            info@devstudio.com</a>
+                    </li>
+                    <li class="contact__item"><a href="tel:++380961111111" class="contact__link">
+                            <svg class="contact__icon" width="10" height="16">
+                                <use href="./images/Icon/icons.svg#icon-phone"></use>
+                            </svg>
+                            +38 096 111 11 11</a></li>
+                </ul>
             </nav>
-            <!-- contacts -->
-            <ul class="contact">
-                <li class="contact__item">
-                    <a href="mailto:info@devstudio.com" class="contact__link">
-                        <svg class="contact__icon" width="16" height="12">
-                            <use href="./images/Icon/icons.svg#icon-mail"></use>
-                        </svg>
-                        info@devstudio.com</a>
-                </li>
-                <li class="contact__item"><a href="tel:++380961111111" class="contact__link">
-                        <svg class="contact__icon" width="10" height="16">
-                            <use href="./images/Icon/icons.svg#icon-phone"></use>
-                        </svg>
-                        +38 096 111 11 11</a></li>
-            </ul>
         </div>
     </header>
     <!-- main section -->
@@ -173,16 +178,16 @@
             <div class="footer-contacts">
                 <a href="./index.html" class="logo-bsmt">Web<span class="logo-bsmt-part">Studio</span></a>
                 <address>
-                    <ul>
-                        <li class="footer-contacts__list">
+                    <ul class="footer-contacts__list">
+                        <li class="footer-contacts__item">
                             <p class="footer-contacts__adds">м. Київ, пр-т Лесі Українки, 26</p>
                         </li>
-                        <li class="footer-contacts__list">
+                        <li class="footer-contacts__item">
                             <a href="mailto:info@devstudio.com" class="footer-contacts__link">
                                 info@devstudio.com
                             </a>
                         </li>
-                        <li class="footer-contacts__list">
+                        <li class="footer-contacts__item">
                             <a href="tel:++380961111111" class="footer-contacts__link">
                                 +38 096 111 11 11
                             </a>
@@ -239,5 +244,48 @@
             </div>
         </div>
     </footer>
+<!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <h2 class="visually-hidden">mobile menu</h2>
+        <button class="menu-toggle js-close-menu">
+            <svg class="menu-toggle__icons" width="40" height="40" aria-label="Перемикач мобільного меню">
+                <use class="menu-toggle__cross" href="./images/Icon/icons.svg#icon-cross"></use>
+            </svg>
+        </button>
+        <ul class="menu-bar">
+            <li class="menu-bar__item"><a href="./index.html" class="menu-bar__link menu-bar__link">Студія</a></li>
+            <li class="menu-bar__item"><a href="./portfolio.html" class="menu-bar__link--current">Портфоліо</a></li>
+            <li class="menu-bar__item"><a href="./index.html" class="menu-bar__link">Контакти</a></li>
+        </ul>
+        <ul class="menu-contact">
+            <li class="menu-contact__item">
+                <a href="tel:++380961111111" class="menu-contact__tel">+38 096 111 11 11</a>
+            </li>
+            </li>
+            <li class="menu-contact__item">
+                <a href="mailto:info@devstudio.com" class="menu-contact__mail">info@devstudio.com</a>
+            </li>
+        </ul>
+        <ul class="menu-soc">
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">Instagram</a>
+            </li>
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">Twitter</a>
+            </li>
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">Facebook</a>
+            </li>
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">LinkedIn</a>
+            </li>
+        </ul>
+    </div>
+<!-- js -->
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+<script defer src="./js/mobile-menu.js"></script>
+<script src="./js/modal.js"></script>
 </body>
 </html>
