--- a/portfolio.html
+++ b/portfolio.html
@@ -231,7 +231,7 @@
             <div class="follow">
                 <h2 class="follow__title">Підпишіться на розсилку</h2>
                 <form name="follow-us" class="follow__form">
-                    <label>
+                    <label class="follow__label">
                         <input class="follow__email" type="email" name="user-email" placeholder="E-mail">
                     </label>
                     <button class="follow__btn" type="submit">
