--- a/index.html
+++ b/index.html
@@ -477,29 +477,31 @@
             <li class="menu-bar__item"><a href="./portfolio.html" class="menu-bar__link">Портфоліо</a></li>
             <li class="menu-bar__item"><a href="./index.html" class="menu-bar__link">Контакти</a></li>
         </ul>
-        <ul class="menu-contact">
-            <li class="menu-contact__item">
-                <a href="tel:++380961111111" class="menu-contact__tel">+38 096 111 11 11</a>
-            </li>
-            </li>
-            <li class="menu-contact__item">
-                <a href="mailto:info@devstudio.com" class="menu-contact__mail">info@devstudio.com</a>
-            </li>
-        </ul>
-        <ul class="menu-soc">
-            <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">Instagram</a>
-            </li>
-            <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">Twitter</a>
-            </li>
-            <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">Facebook</a>
-            </li>
-            <li class="menu-soc__item">
-                <a href="./index.html" class="menu-soc__link">LinkedIn</a>
-            </li>
-        </ul>
+        <div class="menu-toggle__bottom">
+            <ul class="menu-contact">
+                <li class="menu-contact__item">
+                    <a href="tel:++380961111111" class="menu-contact__tel">+38 096 111 11 11</a>
+                </li>
+                </li>
+                <li class="menu-contact__item">
+                    <a href="mailto:info@devstudio.com" class="menu-contact__mail">info@devstudio.com</a>
+                </li>
+            </ul>
+            <ul class="menu-soc">
+                <li class="menu-soc__item">
+                    <a href="./index.html" class="menu-soc__link">Instagram</a>
+                </li>
+                <li class="menu-soc__item">
+                    <a href="./index.html" class="menu-soc__link">Twitter</a>
+                </li>
+                <li class="menu-soc__item">
+                    <a href="./index.html" class="menu-soc__link">Facebook</a>
+                </li>
+                <li class="menu-soc__item">
+                    <a href="./index.html" class="menu-soc__link">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
     </div>
 <!-- js -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
