--- a/index.html
+++ b/index.html
@@ -125,7 +125,34 @@
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="team__card">
-                        <img src="./images/manager-1.jpg" alt="співробітник Ігор" width="450">
+                        <picture>
+                            <source
+                                srcset="
+                                    ./images/main/mob/pc-manager-igor-1x.jpg 1x,
+                                    ./images/main/mob/pc-manager-igor-2x.jpg 2x
+                                    "
+                                    media="(min-width: 1170px)"
+                            />
+                            <source
+                                srcset="
+                                    ./images/main/mob/tab-manager-igor-1x.jpg 1x,
+                                    ./images/main/mob/tab-manager-igor-2x.jpg 2x
+                                    "
+                                    media="(min-width: 768px)"
+                            />
+                            <source
+                                srcset="
+                                    ./images/main/mob/mob-manager-igor-1x.jpg 1x,
+                                    ./images/main/mob/mob-manager-igor-2x.jpg 2x
+                                    "
+                                    media="(max-width: 767px)"
+                            />
+                            <img
+                                src="./images/main/mob/mob-manager-igor-1x.jpg"
+                                alt="співробітник Ігор"
+                                width="450"
+                            />
+                        </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Ігор Дем'яненко</h3>
                             <p class="manager-card__text" lang="en">Product Designer</p>
@@ -162,7 +189,25 @@
                         </div>
                     </li>
                     <li class="team__card">
-                        <img src="./images/manager-2.jpg" alt="співробітник Ольга" width="450">
+                        <picture>
+                            <source srcset="
+                                ./images/main/mob/pc-manager-olga-1x.jpg 1x,
+                                ./images/main/mob/pc-manager-olga-2x.jpg 2x
+                                " media="(min-width: 1170px)" />
+                            <source srcset="
+                                ./images/main/mob/tab-manager-olga-1x.jpg 1x,
+                                ./images/main/mob/tab-manager-olga-2x.jpg 2x
+                                " media="(min-width: 768px)" />
+                            <source srcset="
+                                ./images/main/mob/mob-manager-olga-1x.jpg 1x,
+                                ./images/main/mob/mob-manager-olga-2x.jpg 2x
+                                " media="(max-width: 767px)" />
+                            <img
+                                src="./images/main/mob/mob-manager-olga-1x.jpg"
+                                alt="співробітник Ольга"
+                                width="450"
+                            />
+                        </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Ольга Рєпіна</h3>
                             <p class="manager-card__text" lang="en">Frontend Developer</p>
@@ -199,7 +244,25 @@
                         </div>
                     </li>
                     <li class="team__card">
-                        <img src="./images/manager-3.jpg" alt="співробітник Микола" width="450">
+                        <picture>
+                            <source srcset="
+                                ./images/main/mob/pc-manager-nik-1x.jpg 1x,
+                                ./images/main/mob/pc-manager-nik-2x.jpg 2x
+                                " media="(min-width: 1170px)" />
+                            <source srcset="
+                                ./images/main/mob/tab-manager-nik-1x.jpg 1x,
+                                ./images/main/mob/tab-manager-nik-2x.jpg 2x
+                                " media="(min-width: 768px)" />
+                            <source srcset="
+                                ./images/main/mob/mob-manager-nik-1x.jpg 1x,
+                                ./images/main/mob/mob-manager-nik-2x.jpg 2x
+                                " media="(max-width: 767px)" />
+                            <img
+                                src="./images/main/mob/mob-manager-nik-1x.jpg"
+                                alt="співробітник Микола"
+                                width="450"
+                            />
+                        </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Микола Тарасов</h3>
                             <p class="manager-card__text" lang="en">Marketing</p>
@@ -236,7 +299,24 @@
                         </div>
                     </li>
                     <li class="team__card">
-                        <img src="./images/manager-4.jpg" alt="співробітник Михайло" width="450">
+                        <picture>
+                            <source srcset="
+                                ./images/main/mob/pc-manager-mix-1x.jpg 1x,
+                                ./images/main/mob/pc-manager-mix-2x.jpg 2x
+                                " media="(min-width: 1170px)" />
+                            <source srcset="
+                                ./images/main/mob/tab-manager-mix-1x.jpg 1x,
+                                ./images/main/mob/tab-manager-mix-2x.jpg 2x
+                                " media="(min-width: 768px)" />
+                            <source srcset="
+                                ./images/main/mob/mob-manager-mix-1x.jpg 1x,
+                                ./images/main/mob/mob-manager-mix-2x.jpg 2x
+                                " media="(max-width: 767px)" />
+                            <img
+                                src="./images/main/mob/mob-manager-mix-1x.jpg"
+                                alt="співробітник Михайло"
+                                width="450" />
+                        </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Михайло Єрмаков</h3>
                             <p class="manager-card__text" lang="en">UI Designer</p>
