--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
                     </svg>
                 </button>
                 <ul class="nav-bar__list">
-                    <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link nav-bar__link">Студія</a>
+                    <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link">Студія</a>
                     </li>
-                    <li class="nav-bar__item"><a href="./portfolio.html" class="nav-bar__link--current">Портфоліо</a></li>
+                    <li class="nav-bar__item"><a href="./portfolio.html" class="nav-bar__link nav-bar__link--current">Портфоліо</a></li>
                     <li class="nav-bar__item"><a href="./index.html" class="nav-bar__link">Контакти</a></li>
                 </ul>
                 <!-- contacts -->
