--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,21 @@
                 <ul class="gallery__cards">
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-techno-1x.jpg" alt="Технокряк" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-techno-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-techno-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-techno-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-techno-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-techno-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-techno-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-techno-1x.jpg" alt="Технокряк" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                             вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
@@ -74,7 +88,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-orlean-1x.jpg" alt="Постер New Orlean vs Golden Star" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-orlean-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-orlean-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-orlean-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-orlean-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-orlean-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-orlean-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-orlean-1x.jpg" alt="Постер New Orlean vs Golden Star" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
@@ -86,7 +114,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-seafood-1x.jpg" alt="Ресторан Seafood" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-seafood-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-seafood-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-seafood-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-seafood-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-seafood-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-seafood-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-seafood-1x.jpg" alt="Ресторан Seafood" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
@@ -98,7 +140,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-prime-1x.jpg" alt="Проєкт Prime" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-prime-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-prime-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-prime-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-prime-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-prime-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-prime-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-prime-1x.jpg" alt="Проєкт Prime" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
@@ -110,7 +166,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-boxes-1x.jpg" alt="Проєкт Boxes" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-boxes-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-boxes-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-boxes-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-boxes-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-boxes-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-boxes-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-boxes-1x.jpg" alt="Проєкт Boxes" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
@@ -122,7 +192,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-inspiration-1x.jpg" alt="Inspiration has no Borders" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-inspiration-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-inspiration-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-inspiration-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-inspiration-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-inspiration-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-inspiration-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-inspiration-1x.jpg" alt="Inspiration has no Borders" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
@@ -134,7 +218,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-limited-1x.jpg" alt="Видання Limited Edition" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-limited-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-limited-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-limited-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-limited-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-limited-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-limited-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-limited-1x.jpg" alt="Видання Limited Edition" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
@@ -146,7 +244,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-lab-1x.jpg" alt="Проєкт LAB" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-lab-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-lab-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-lab-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-lab-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-lab-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-lab-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-lab-1x.jpg" alt="Проєкт LAB" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
@@ -158,7 +270,21 @@
                     </li>
                     <li class="gallery-card">
                         <div class="gallery-card__img">
-                            <img src="./images/Portfolio/poster-business-1x.jpg" alt="Growing Business" width="450">
+                            <picture>
+                                <source srcset="
+                                    ./images/portfolio/mob/mob-business-1x.jpg 1x,
+                                    ./images/portfolio/mob/mob-business-2x.jpg 2x
+                                    " media="(min-width: 1170px)" />
+                                <source srcset="
+                                    ./images/portfolio/tablet/tab-business-1x.jpg 1x,
+                                    ./images/portfolio/tablet/tab-business-2x.jpg 2x
+                                    " media="(min-width: 768px)" />
+                                <source srcset="
+                                    ./images/portfolio/desktop/pc-business-1x.jpg 1x,
+                                    ./images/portfolio/desktop/pc-business-2x.jpg 2x
+                                    " media="(max-width: 767px)" />
+                                <img src="./images/portfolio/mob/mob-business-1x.jpg" alt="Growing Business" width="450" />
+                            </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
                                 вичерпні відомості про компанію чи приватну особу.</p>
