--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                             вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
-                        <div class="gallery-card__name">
+                        <div class="gallery-card__name gallery-card__name--stretch">
                             <h2 class="gallery-card__title">Технокряк</h2>
                             <p class="gallery-card__text">Веб-сайт</p>
                         </div>
